src/bootstrap/test/v0_8/rejects/04_split_empty_sep_runtime_panic/main.zg
# requires: v0.8
import "strings"

xs := strings.split("abc", "")
print xs
